imagine doing stuff

--- a/index.html
+++ b/index.html
@@ -9,12 +9,24 @@
 
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" type="text/css" href="css/home.css">
+        <link rel="stylesheet" type="text/css" href="css/nav.css">
+        <link rel="stylesheet" type="text/css" href="css/footer.css">
     </head>
 
     <body>
         <nav>
-
+            <div class="nav-wrapper home">
+                <div class="left">
+                    <h3><a href="#">FOLIO '22</a></h3>
+                    <div class="line"></div>
+                </div>
+                <div class="right">
+                    <a href="#work">Work</a>
+                    <a href="./about.html">About</a>
+                </div>
+            </div>
         </nav>
+
         <div class="wrapper">
             <div class="header">
                 <h1><span class="black">Daniel King</span> is a <span class="black">designer</span> and <span class="black">developer</span> based in <span class="black">Washington.</span></h1>
@@ -35,7 +47,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="" class="card wta-card">
+                    <a data-aos="" href="wta.html" class="card wta-card">
                         <div class="blurb">
                             <h2>WTA App Concept</h2>
                             <p>Designed a first-party mobile app for finding route information and trip planning with strong WTA branding.</p>
@@ -47,7 +59,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="" class="card mental-card">
+                    <a data-aos="" href="./mental-reminder.html" class="card mental-card">
                         <div class="blurb">
                             <h2>Mental Reminder</h2>
                             <p>A minimal, mental-health based reminder app with a focus on usability.</p>
@@ -112,6 +124,36 @@
 
             </section>
         </div>
+
+        <footer>
+
+            <div class="footer-wrapper home">
+                <h3>Let's build something cool together.</h3>
+
+                <div class="footer-3-col">
+
+                    <div class="socials">
+                        <p class="footer-column-header">Projects</p>
+                        <p class="hvr-underline-from-left"><a href="./airbnb.html">Airbnb Eco</a></p>
+                        <p class="hvr-underline-from-left"><a href="./wta.html">WTA App</a></p>
+                        <p class="hvr-underline-from-left"><a href="./mental-reminder.html">Mental Reminder</a></p>
+                    </div>
+
+                    <div class="links">
+                        <p class="footer-column-header">Links</p>
+                        <p class="hvr-underline-from-left"><a href="https://www.behance.net/danielking9">Behance</a></p>
+                        <p class="hvr-underline-from-left"><a href="https://www.linkedin.com/in/daniel-king-8050aa150/">LinkedIn</a></p>
+                        <p class="hvr-underline-from-left"><a href="https://github.com/kingce">Github</a></p>
+                    </div>
+
+                    <div class="email">
+                        <p class="footer-column-header">Email</p>
+                        <p class="hvr-underline-from-left"><a href="">chuan.e.king@gmail.com</a></p>
+                    </div>
+                </div>
+            </div>
+
+        </footer>
 
 
     </body>
