--- a/mental-reminder.html
+++ b/mental-reminder.html
@@ -84,6 +84,26 @@
                 </div>
             </div>
 
+            <div class="two-col">
+                <div class="text-block">
+                    <h5 class="pre-title">Step 1 - Research</h5>
+                    <h3>We started off with research to better understand our market and our users.</h3>
+                </div>
+
+                <div class="text-two-col">
+                    <div class="col">
+                        <p><strong>Systematic literature review across 10 research papers helped us confirm our assumptions and learn more.</strong><br></p>
+                        <p>From this, we learned about that:</p>
+                        <p>1. Users value the user interface and friendliness particularly high in mental-health focused apps</p>
+                        <p>2. When designing specifically for mental health, it's important to keep it simple and not overwhelm the user's cognitive load</p>
+                    </div>
+                    <div class="col">
+                        <p><strong>We then conducted competitor benchmarking to identify our market and our niche.</strong></p>
+                        <p>Between the twelve applications examined, the common complaints were feature bloat and pricing. Most reminder apps were too robust for our target audience's use cases, resulting in clunky UI and and overall poor experience. Additionally, most of the apps that were mental-health focused featured subscriptions or had most of their features locked behind paywalls.</p>
+                    </div>
+                </div>
+            </div>
+
 
         </div>
 
