--- a/airbnb.html
+++ b/airbnb.html
@@ -273,7 +273,6 @@
                     <p><em>After changing our copy, our second round of testing saw a 100% success rate (5/5) with tasks involving that change, which was a marked improvement from before.</em></p>
 
                 </div>
-                
                 <div class="image-wrapper image-right">
                     <img src="./assets/airbnb/copy-example.png" class="text-block-image" />
                 </div>
@@ -353,6 +352,15 @@
             </div>
                 
         </div>
+
+        <section class="end">
+            <h3>- Other Projects -</h3>
+            <div class="end-project-list">
+                <a href="./airbnb.html">Airbnb Eco</a>
+                <a href="./wta.html">WTA App Concept</a>
+                <a href="./mental-reminder">Mental Reminder</a>
+            </div>
+        </section>
 
         <footer>
 
