--- a/wta.html
+++ b/wta.html
@@ -215,6 +215,15 @@
 
         </div>
 
+        <section class="end">
+            <h3>- Other Projects -</h3>
+            <div class="end-project-list">
+                <a href="./airbnb.html">Airbnb Eco</a>
+                <a href="./wta.html">WTA App Concept</a>
+                <a href="./mental-reminder">Mental Reminder</a>
+            </div>
+        </section>
+
          <footer>
 
             <div class="footer-wrapper home">
