--- a/airbnb.html
+++ b/airbnb.html
@@ -356,9 +356,9 @@
         <section class="end">
             <h3>- Other Projects -</h3>
             <div class="end-project-list">
-                <a href="./airbnb.html">Airbnb Eco</a>
                 <a href="./wta.html">WTA App Concept</a>
-                <a href="./mental-reminder">Mental Reminder</a>
+                <a href="./move-in.html">WWU Move-In</a>
+                <a href="./mental-reminder.html">Mental Reminder</a>
             </div>
         </section>
 
