--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
+                    <a data-aos="" href="./move-in.html" class="card move-in-card">
+                        <div class="blurb">
+                            <h2>WWU Move-In App</h2>
+                            <p>Designed a progressive web app to guide over 400 <br> students through a socially distanced move-in process.</p>
+                        </div>
+                        <div class="img move-in-img">
+                        </div>
+                    </a>
+                </div>
+
+                <div class="card-wrapper" href="">
+                    <div data-aos="reveal" class="hider"></div>
                     <a data-aos="" href="./mental-reminder.html" class="card mental-card">
                         <div class="blurb">
                             <h2>Mental Reminder</h2>
@@ -69,17 +81,6 @@
                     </a>
                 </div>
 
-                <div class="card-wrapper" href="">
-                    <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="" class="card move-in-card">
-                        <div class="blurb">
-                            <h2>WWU Move-In App</h2>
-                            <p>Designed a progressive web app to guide over 400 <br> students through a socially distanced move-in process.</p>
-                        </div>
-                        <div class="img move-in-img">
-                        </div>
-                    </a>
-                </div>
             </section>
 
             <section class="other-work">
@@ -89,12 +90,13 @@
                         <h3>Young Tea</h3>
                         <p class="other-blurb-smalltext"><em>Graphic Designer</em></p>
                         <p>Visual and graphic designer for Young Tea, a boba store based in Washington. Work includes digital signage, print design, and menu design. </p>
+                        <a class="black" href="young-tea.html"><strong>View Work</strong></a>
 
                     </div>
                     <div class="other-long-img">
                         <div class="other-long-hider">
                         </div>
-                        <img src="assets/YT Preview.png" class="long-image"/>
+                        <img src="assets/young-tea-cover-dark.png" class="long-image"/>
                     </div>
                 </div>
 
@@ -108,6 +110,7 @@
                             <h3>EXCHANGE</h3>
                             <p class="other-blurb-smalltext"><em>UX Side Project</em></p>
                             <p>Bring the BST community closer through a dedicated platform for buying, selling, and trading hobbies.</p>
+                            <a class="black" href="https://www.behance.net/gallery/110527603/EXCHANGE-App-Concept" target="_blank"><strong>Behance Case Study ↗</strong></a>
                         </div>
                     </div>
                     <div class="other-small">
@@ -118,6 +121,7 @@
                             <h3>Interlude</h3>
                             <p class="other-blurb-smalltext"><em>Chrome Extension</em></p>
                             <p>Chrome Extension to help users take the breaks that they need.</p>
+                            <a href="https://github.com/kingce/interlude" target="_blank"><strong>Github link ↗</strong></a>
                         </div>
                     </div>
                 </div>
