--- a/mental-reminder.html
+++ b/mental-reminder.html
@@ -342,7 +342,7 @@
             <div class="end-project-list">
                 <a href="./airbnb.html">Airbnb Eco</a>
                 <a href="./wta.html">WTA App Concept</a>
-                <a href="./mental-reminder">Mental Reminder</a>
+                <a href="./move-in.html">WWU Move-In</a>
             </div>
         </section>
 
@@ -380,3 +380,4 @@
 
 
     </body>
+</html>
