--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 <div class="line"></div>
             </div>
             <div class="right">
-                <a href="#work">Work</a>
+                <a href="./index.html#work">Work</a>
                 <a href="./about.html">About</a>
             </div>
 
