--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
         <link rel="stylesheet" type="text/css" href="css/home.css">
         <link rel="stylesheet" type="text/css" href="css/nav.css">
         <link rel="stylesheet" type="text/css" href="css/footer.css">
+
+        <script
+  src="https://code.jquery.com/jquery-3.3.1.js"
+  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -33,9 +38,9 @@
             </div>
 
             <section class="work">
-                <div class="card-wrapper" href="">
+                <div class="card-wrapper">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="airbnb.html" class="card airbnb-card">
+                    <a href="airbnb.html" class="card airbnb-card">
                         <div class="blurb">
                             <h2>Airbnb Eco</h2>
                             <p>Airbnb Eco helps guests prioritize sustainable travel and rewards environmentally friendly practices while empowering local communities.</p>
@@ -47,7 +52,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="wta.html" class="card wta-card">
+                    <a href="wta.html" class="card wta-card">
                         <div class="blurb">
                             <h2>WTA App Concept</h2>
                             <p>Designed a first-party mobile app for finding route information and trip planning with strong WTA branding.</p>
@@ -59,7 +64,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="./move-in.html" class="card move-in-card">
+                    <a href="./move-in.html" class="card move-in-card">
                         <div class="blurb">
                             <h2>WWU Move-In App</h2>
                             <p>Designed a progressive web app to guide over 400 <br> students through a socially distanced move-in process.</p>
@@ -71,7 +76,7 @@
 
                 <div class="card-wrapper" href="">
                     <div data-aos="reveal" class="hider"></div>
-                    <a data-aos="" href="./mental-reminder.html" class="card mental-card">
+                    <a href="./mental-reminder.html" class="card mental-card">
                         <div class="blurb">
                             <h2>Mental Reminder</h2>
                             <p>A minimal, mental-health based reminder app with a focus on usability.</p>
@@ -116,6 +121,7 @@
                     <div class="other-small">
                         <div class="other-small-img">
                             <div class="other-small-hider"></div>
+                            <img src="assets/interlude-temp.png" class="long-image"/>
                         </div>
                         <div class="other-blurb">
                             <h3>Interlude</h3>
@@ -164,7 +170,9 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script src="./js/nav.js"></script>
+    <!---<script src="https://unpkg.com/aos@next/dist/aos.js"></script>--->
+    <!--
     <script type="text/javascript">
 
         var myTimeline = anime.timeline({
@@ -181,5 +189,6 @@
 
 
     </script>
+-->
 
 </html>
