--- a/airbnb.html
+++ b/airbnb.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="deliverables">
                         <h3>Deliverables</h3>
-                        <p><a href="https://pitchdeck.figmatic.com/slides/knqq0fyn39869?token=LlFSR1ljU3IlJTc9Q3s%3D" target="_blank">Pitchdeck ↗</a></p>
+                        <p><a href="https://pitchdeck.hypermatic.com/slides/knqq0fyn39869?token=LlFSR1ljU3IlJTc9Q3s=" target="_blank">Pitchdeck ↗</a></p>
                         <p><a href="./assets/airbnb/AirbnbCaseStudyFinal.pdf"  target="_blank">Case Study ↗</a></p>
                         <p><a href="https://www.figma.com/proto/0z1j4sWDiRL9Ra5j9V8hkt/Final-Prototype?page-id=0%3A1&node-id=108%3A10&scaling=scale-down" target="_blank">Prototype ↗</a></p>
                     </div>
